--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <script defer src="script.js"></script>
-    <title>Snake Gamen</title>
+    <title>Snake Game</title>
   </head>
   <body>
     <canvas id="snake" width="512" height="512"></canvas>
